# prodis

./: .gitignore  LICENSE  pyproject.toml  setup.py  setup.py.bak
src/prodis/: __init__.py  __main__.py  cli.py  clientcounterpart.py  clienthandler.py  clientlistener.py  debug.py  forevertask.py  logger.py  main.py  packetmirror.py  packetmonitor.py  packetreader.py  packetwriter.py  runner.py  serverconnector.py  serverhandler.py  serverpinger.py
src/prodis/packets/: __init__.py  byteutils.py  iterutils.py  metaclasses.py  packet.py
src/prodis/packets/handshaking/: __init__.py  serverbound.py
src/prodis/packets/login/: clientbound.py  serverbound.py
src/prodis/packets/play/: __init__.py  clientbound.py  serverbound.py
src/prodis/packets/status/: clientbound.py  serverbound.py
src/prodis/utils/: byte.py  context.py  fmt.py  iter.py  parse.py
