[project]
name = "prodis"
version = "0.2"
description = "Protocol Dissector"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
    { name = "Niels Boehm", email = "blubberdiblub@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "trio",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
homepage = "https://github.com/blubberdiblub/prodis"
repository = "https://github.com/blubberdiblub/prodis"

[build-system]
requires = [
    "flit_core ~= 3.5",
]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "prodis"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib"
required_plugins = [
    "pytest-trio",
]
trio_mode = true
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
files = "src/prodis"
